# Asuna

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
asuna/: CMakeLists.txt  main.cpp
asuna/assets/hostdevice/: binding.h  camera.h  pushconstant.h  vertex.h
asuna/assets/shaders/graphic/: graphic.idle.frag  graphic.idle.vert
asuna/assets/shaders/post/: post.idle.frag  post.idle.vert
asuna/assets/shaders/raytrace/: raytrace.intersectiontest.rchit  raytrace.intersectiontest.rmiss  raytrace.uvtest.rchit  raytrace.uvtest.rgen
asuna/assets/shaders/raytrace/common/: structs.glsl
asuna/hostdevice/: binding.h  camera.h  emitter.h  instance.h  light.h  material.h  pushconstant.h  scene.h  sun_and_sky.h  vertex.h
asuna/loader/: loader.cpp  loader.h  utils.h
asuna/shaders/graphic/: graphic.idle.frag  graphic.idle.vert
asuna/shaders/graphics/: graphics.idle.frag
asuna/shaders/post/: post.idle.frag  post.idle.vert
asuna/shaders/post/utils/: random.glsl  tonemapping.glsl
asuna/shaders/raytrace/: pathtrace.rgen  pathtrace.rmiss  raytrace.brdf_lambertian.rchit  raytrace.default.rmiss  raytrace.intersectiontest.rchit  raytrace.intersectiontest.rgen  raytrace.intersectiontest.rmiss  raytrace.perspective.rgen  raytrace.pinhole.rgen  raytrace.projective.rgen  raytrace.shadow.rmiss  raytrace.uvtest.rgen  shadow.rmiss
asuna/shaders/raytrace/common/: macro.glsl  math.glsl  structs.glsl
asuna/shaders/raytrace/utils/: layouts.glsl  macro.glsl  math.glsl  rchit_layouts.glsl  sample_light.glsl  structs.glsl  sun_and_sky.glsl
asuna/tracer/: asuna_tracer.cpp  asuna_tracer.h  context.h  tracer.cpp  tracer.h
asuna/tracer/context/: context.cpp  context.h
asuna/tracer/pipeline/: pipeline.cpp  pipeline.h  pipeline_graphic.cpp  pipeline_graphic.h  pipeline_graphics.cpp  pipeline_graphics.h  pipeline_post.cpp  pipeline_post.h  pipeline_raytrace.cpp  pipeline_raytrace.h
asuna/tracer/scene/: alloc.h  bounding_box.h  camera.cpp  camera.h  emitter.cpp  emitter.h  instance.cpp  instance.h  integrator.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  primitive.h  scene.cpp  scene.h  sensor.cpp  sensor.h  texture.cpp  texture.h  utils.h
docker/: Dockerfile
scripts/: Untitled.ipynb  exr2hdr.py  revert_normal.py  split_metallic_roughness.py
src/: main.cpp
src/context/: context.cpp  context.h
src/core/: alloc.h  bounding_box.h  camera.cpp  camera.h  instance.cpp  instance.h  integrator.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  primitive.h  state.h  texture.cpp  texture.h
src/ext/: tqdm.h
src/loader/: loader.cpp  loader.h  material.cpp  utils.h
src/pipeline/: pipeline.cpp  pipeline.h  pipeline_graphics.cpp  pipeline_graphics.h  pipeline_post.cpp  pipeline_post.h  pipeline_raytrace.cpp  pipeline_raytrace.h
src/scene/: scene.cpp  scene.h
src/shaders/: post.buffer2img.comp  post.idle.frag  post.img2buffer.comp  raytrace.default.rmiss  raytrace.projective.rgen  raytrace.shadow.rmiss
src/shaders/bxdf/: raytrace.brdf_conductor.rchit  raytrace.brdf_disney.rchit  raytrace.brdf_disney.tools.glsl  raytrace.brdf_disney.tools.glsl.backup  raytrace.brdf_emissive.rchit  raytrace.brdf_kang18.rchit  raytrace.brdf_lambertian.rchit  raytrace.brdf_mirror.rchit  raytrace.brdf_pbr_metalness_roughness.rchit  raytrace.brdf_phong.rchit  raytrace.brdf_plastic.rchit  raytrace.brdf_rough_conductor.rchit  raytrace.brdf_rough_plastic.rchit  raytrace.bsdf_dielectric.rchit
src/shaders/utils/: math.glsl  random.glsl  rchit_layouts.glsl  sample_light.glsl  structs.glsl  sun_and_sky.glsl  tonemapping.glsl
src/shared/: binding.h  camera.h  instance.h  light.h  material.h  pushconstant.h  sun_and_sky.h  vertex.h
src/tracer/: denoiser.cpp  denoiser.h  gui.cpp  tracer.cpp  tracer.h
